--- a/navbarlogin.html
+++ b/navbarlogin.html
@@ -1,1 +1,29 @@
-
+<!-- navbarlogin.html -->
+<!DOCTYPE html>
+<html lang="en" onload="fetchData()">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li class="logo"><a href="#">Fetch API</a></li>
+        <li><a href="navbarlogin.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="content">
+    <h1>Welcome to the Home Page!</h1>
+    <h1>Refresh this Page Random Images are Shown using FETCH API</h1>
+    <div id="output"></div>
+    <div id="gallery" class="gallery"></div>
+  </div>
+  <script src="homescript.js"></script>
+</body>
+</html>
